// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slots can define and call slots 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><div><owl-anchor/></div><div><owl-anchor/></div></div>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      const el1 = this.el.firstChild;
      this.anchors[0] = el1.firstChild;
      this.anchors[1] = el1.nextSibling.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'header');
    b1.children[1] = callSlot(ctx, node, key, 'footer');
    return b1;
  }
}"
`;

exports[`slots can define and call slots 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<span>header</span>\`);
  }
  
  class Block3 extends BStatic {
    static el = elem(\`<span>footer</span>\`);
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const b3 = new Block3();
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b4 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b4.node.slots = {'header': slot3(ctx2), 'footer': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots content is the default slot (variation) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots content is the default slot (variation) 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<span>sts rocks</span>\`);
  }
  
  const slot2 = ctx => (node, key) => {
    const b1 = new Block1();
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots content is the default slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots content is the default slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<span>sts rocks</span>\`);
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new Block2();
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots dafault slots can define a default content 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\`default content\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default', defaultSlot1, false);
    return b1;
  }
}"
`;

exports[`slots dafault slots can define a default content 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots default content is not rendered if named slot is provided 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\`default content\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'header', defaultSlot1, false);
    return b1;
  }
}"
`;

exports[`slots default content is not rendered if named slot is provided 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BText(\`hey\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'header': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots default content is not rendered if slot is provided 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\`default content\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default', defaultSlot1, false);
    return b1;
  }
}"
`;

exports[`slots default content is not rendered if slot is provided 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BText(\`hey\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots default slot next to named slot, with default content 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div class=\\"Dialog\\"><div class=\\"content\\"><owl-anchor/></div><div class=\\"footer\\"><owl-anchor/></div></div>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      const el1 = this.el.firstChild;
      this.anchors[0] = el1.firstChild;
      this.anchors[1] = el1.nextSibling.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\` Default content \`);
    return b2;
  }
  
  const defaultSlot2 = ctx => {
    const b3 = new BText(\` Default footer \`);
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default', defaultSlot1, false);
    b1.children[1] = callSlot(ctx, node, key, 'footer', defaultSlot2, false);
    return b1;
  }
}"
`;

exports[`slots default slot next to named slot, with default content 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BText(\` Overridden footer \`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'footer': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots default slot work with text nodes (variation) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots default slot work with text nodes (variation) 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BText(\`sts rocks\`);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots default slot work with text nodes 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots default slot work with text nodes 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BText(\`sts rocks\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots dynamic t-slot call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<button><owl-anchor/></button>\`);
    children = new Array(1);
    anchors = new Array(1);
    handlers = new Array(1);
    build() {
      const el1 = this.el;
      this.setupHandler(el1, \`click\`, 0);
      this.anchors[0] = el1.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    b1.handlers[0] = (e) => ctx.__owl__.component['toggle'](e);
    const slot1 = (ctx['current'].slot);
    b1.children[0] = new BDispatch(slot1, callSlot(ctx, node, key, slot1));
    return b1;
  }
}"
`;

exports[`slots dynamic t-slot call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<p>slot1</p>\`);
  }
  
  class Block3 extends BStatic {
    static el = elem(\`<span>content</span>\`);
  }
  
  class Block4 extends BStatic {
    static el = elem(\`<h1>slot2</h1>\`);
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BMulti(2);
    const b3 = b2.children[0] = new Block2();
    const b4 = b2.children[1] = new Block3();
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const b5 = new Block4();
    return b5;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b6 = b1.children[0] = new BNode(\`Toggler\`, {}, key + \`__1\`, ctx, node);
    b6.node.slots = {'slot1': slot3(ctx2), 'slot2': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots dynamic t-slot call with default 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<button><owl-anchor/></button>\`);
    children = new Array(1);
    anchors = new Array(1);
    handlers = new Array(1);
    build() {
      const el1 = this.el;
      this.setupHandler(el1, \`click\`, 0);
      this.anchors[0] = el1.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\` owl \`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    b1.handlers[0] = (e) => ctx.__owl__.component['toggle'](e);
    b1.children[0] = callSlot(ctx, node, key, (ctx['current'].slot), defaultSlot1, true);
    return b1;
  }
}"
`;

exports[`slots dynamic t-slot call with default 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<p>slot1</p>\`);
  }
  
  class Block3 extends BStatic {
    static el = elem(\`<span>content</span>\`);
  }
  
  class Block4 extends BStatic {
    static el = elem(\`<h1>slot2</h1>\`);
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BMulti(2);
    const b3 = b2.children[0] = new Block2();
    const b4 = b2.children[1] = new Block3();
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const b5 = new Block4();
    return b5;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b6 = b1.children[0] = new BNode(\`Toggler\`, {}, key + \`__1\`, ctx, node);
    b6.node.slots = {'slot1': slot3(ctx2), 'slot2': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots fun: two calls to the same slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BMulti(2);
    b1.children[0] = callSlot(ctx, node, key, 'default');
    b1.children[1] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots fun: two calls to the same slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BText(\`some text\`);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots missing slots are ignored 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/><span>some content</span><owl-anchor/></span>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      this.anchors[0] = this.el.firstChild;
      this.anchors[1] = this.anchors[0].nextSibling.nextSibling;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    b1.children[1] = callSlot(ctx, node, key, 'footer');
    return b1;
  }
}"
`;

exports[`slots missing slots are ignored 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots multiple roots are allowed in a default slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots multiple roots are allowed in a default slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<span>sts</span>\`);
  }
  
  class Block3 extends BStatic {
    static el = elem(\`<span>rocks</span>\`);
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BMulti(2);
    const b3 = b2.children[0] = new Block2();
    const b4 = b2.children[1] = new Block3();
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b5 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b5.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots multiple roots are allowed in a named slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'content');
    return b1;
  }
}"
`;

exports[`slots multiple roots are allowed in a named slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BStatic {
    static el = elem(\`<span>sts</span>\`);
  }
  
  class Block3 extends BStatic {
    static el = elem(\`<span>rocks</span>\`);
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BMulti(2);
    const b3 = b2.children[0] = new Block2();
    const b4 = b2.children[1] = new Block3();
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b5 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b5.node.slots = {'content': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots multiple slots containing components 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].val;
    return b1;
  }
}"
`;

exports[`slots multiple slots containing components 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/><owl-anchor/></div>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      this.anchors[0] = this.el.firstChild;
      this.anchors[1] = this.anchors[0].nextSibling;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 's1');
    b1.children[1] = callSlot(ctx, node, key, 's2');
    return b1;
  }
}"
`;

exports[`slots multiple slots containing components 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot3 = ctx => (node, key) => {
    const b1 = new BNode(\`C\`, {val: 1}, key + \`__4\`, ctx, node);
    return b1;
  }
  
  const slot5 = ctx => (node, key) => {
    const b2 = new BNode(\`C\`, {val: 2}, key + \`__6\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const ctx2 = capture(ctx);
    const b3 = new BNode(\`B\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'s1': slot3(ctx2), 's2': slot5(ctx2)};
    return b3;
  }
}"
`;

exports[`slots named slot inside slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/><owl-anchor/></div>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      this.anchors[0] = this.el.firstChild;
      this.anchors[1] = this.anchors[0].nextSibling;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'brol');
    b1.children[1] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots named slot inside slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<p>A<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  class Block3 extends BElem {
    static el = elem(\`<p>B<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    b2.data[0] = ctx['value'];
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const ctx6 = capture(ctx);
    const b4 = new BNode(\`Child\`, {}, key + \`__5\`, ctx, node);
    b4.node.slots = {'brol': slot7(ctx6)};
    return b4;
  }
  
  const slot7 = ctx => (node, key) => {
    const b3 = new Block3();
    b3.data[0] = ctx['value'];
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b5 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b5.node.slots = {'brol': slot3(ctx2), 'default': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots named slot inside slot, part 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/><owl-anchor/></div>\`);
    children = new Array(2);
    anchors = new Array(2);
    build() {
      this.anchors[0] = this.el.firstChild;
      this.anchors[1] = this.anchors[0].nextSibling;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'brol');
    b1.children[1] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots named slot inside slot, part 3 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<p>A<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  class Block3 extends BElem {
    static el = elem(\`<p>B<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    b2.data[0] = ctx['value'];
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const ctx6 = capture(ctx);
    const b4 = new BNode(\`Child\`, {}, key + \`__5\`, ctx, node);
    b4.node.slots = {'brol': slot7(ctx6)};
    return b4;
  }
  
  const slot7 = ctx => (node, key) => {
    const b3 = new Block3();
    b3.data[0] = ctx['value'];
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b5 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b5.node.slots = {'brol': slot3(ctx2), 'default': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots named slots can define a default content 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\`default content\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'header', defaultSlot1, false);
    return b1;
  }
}"
`;

exports[`slots named slots can define a default content 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots named slots inside slot, again 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<child><owl-anchor/><owl-anchor/><owl-anchor/></child>\`);
    children = new Array(3);
    anchors = new Array(3);
    build() {
      this.anchors[0] = this.el.firstChild;
      this.anchors[1] = this.anchors[0].nextSibling;
      this.anchors[2] = this.anchors[1].nextSibling;
    }
  }
  
  const defaultSlot1 = ctx => {
    const b2 = new BText(\`default1\`);
    return b2;
  }
  
  const defaultSlot2 = ctx => {
    const b3 = new BText(\`default2\`);
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'brol1', defaultSlot1, false);
    b1.children[1] = callSlot(ctx, node, key, 'brol2', defaultSlot2, false);
    b1.children[2] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots named slots inside slot, again 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<p>A<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  class Block3 extends BElem {
    static el = elem(\`<p>B<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    b2.data[0] = ctx['value'];
    return b2;
  }
  
  const slot4 = ctx => (node, key) => {
    const ctx6 = capture(ctx);
    const b4 = new BNode(\`Child\`, {}, key + \`__5\`, ctx, node);
    b4.node.slots = {'brol2': slot7(ctx6)};
    return b4;
  }
  
  const slot7 = ctx => (node, key) => {
    const b3 = new Block3();
    b3.data[0] = ctx['value'];
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b5 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b5.node.slots = {'brol1': slot3(ctx2), 'default': slot4(ctx2)};
    return b1;
  }
}"
`;

exports[`slots nested slots in same template 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"c1\\"><div><owl-anchor/></div></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots nested slots in same template 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"c2\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots nested slots in same template 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<span>Child 3</span>\`);
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`slots nested slots in same template 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"parent\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b3 = new BNode(\`Child2\`, {}, key + \`__3\`, ctx, node);
    b3.node.slots = {'default': slot4(ctx)};
    return b3;
  }
  
  const slot4 = ctx => (node, key) => {
    const b2 = new BNode(\`Child3\`, {}, key + \`__5\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b4 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b4.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots nested slots: evaluation context and parented relationship 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].val;
    return b1;
  }
}"
`;

exports[`slots nested slots: evaluation context and parented relationship 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots nested slots: evaluation context and parented relationship 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`GrandChild\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots nested slots: evaluation context and parented relationship 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BNode(\`Slot\`, {val: ctx['state'].val}, key + \`__3\`, ctx, node);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots no named slot content => just no children 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'header');
    return b1;
  }
}"
`;

exports[`slots no named slot content => just no children 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots simple default slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots simple default slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BText(\`some text\`);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots simple default slot, variation 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots simple default slot, variation 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BText(\`some text\`);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots slot and (inline) t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<p>sokka</p>\`);
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`slots slot and (inline) t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot and (inline) t-call 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  const callTemplate_5 = getTemplate(\`__template__9\`);
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = callTemplate_5(ctx, node, key + \`__4\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slot and (inline) t-esc 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot and (inline) t-esc 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BText('toph');
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots slot and t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<p>sokka</p>\`);
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`slots slot and t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot and t-call 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  const callTemplate_5 = getTemplate(\`__template__9\`);
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = callTemplate_5(ctx, node, key + \`__4\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slot and t-esc 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot and t-esc 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BText('toph');
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots slot are properly rendered if inner props are changed 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div> SC:<owl-text/></div>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].val;
    return b1;
  }
}"
`;

exports[`slots slot are properly rendered if inner props are changed 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot are properly rendered if inner props are changed 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><button>Inc[<owl-text/>]</button><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    handlers = new Array(1);
    build() {
      const el1 = this.el.firstChild;
      this.setupHandler(el1, \`click\`, 0);
      this.anchors[0] = el1.nextSibling;
    }
    update(prevData, data) {
      setText(this.el.firstChild.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BNode(\`SomeComponent\`, {val: ctx['state'].val}, key + \`__3\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    b1.handlers[0] = (e) => ctx.__owl__.component['inc'](e);
    b1.data[0] = ctx['state'].val;
    const b3 = b1.children[0] = new BNode(\`GenericComponent\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots slot content is bound to caller 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot content is bound to caller 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<button>some text</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, \`click\`, 0);
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b1 = new Block1();
    b1.handlers[0] = (e) => ctx.__owl__.component['inc'](e);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b2 = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots slot preserves properly parented relationship 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BText(\`Grand Child\`);
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BNode(\`GrandChild\`, {}, key + \`__3\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship, even through t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship, even through t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BText(\`Grand Child\`);
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship, even through t-call 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new BNode(\`GrandChild\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots slot preserves properly parented relationship, even through t-call 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  const callTemplate_5 = getTemplate(\`sub\`);
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = callTemplate_5(ctx, node, key + \`__4\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slots and wrapper components 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<a href=\\"abc\\"><owl-anchor/></a>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots and wrapper components 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  const slot2 = ctx => (node, key) => {
    const b1 = new BText(\`hey\`);
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Link\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots slots are rendered with proper context 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'footer');
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><span class=\\"counter\\"><owl-text/></span><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.nextSibling;
    }
    update(prevData, data) {
      setText(this.el.firstChild.firstChild, prevData[0], data[0]);
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<button>do something</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, \`click\`, 0);
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    b2.handlers[0] = (e) => ctx.__owl__.component['doSomething'](e);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    b1.data[0] = ctx['state'].val;
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'footer': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<a><owl-anchor/></a>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
    update(prevData, data) {
      this.updateAttr(this.el, \`href\`, this.data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].to;
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 2 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><u><owl-anchor/></u></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<li><owl-anchor/></li>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot4 = ctx => (node, key) => {
    const b4 = new BMulti(2);
    b4.children[0] = new BText(\`User \`);
    b4.children[1] = new BText(ctx['user'].name);
    return b4;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b2 = b1.children[0] = new BCollection(ctx['state'].users, true, false);
    ctx = Object.create(ctx);
    const k1 = b2.values, v1 = b2.collection, l1 = k1.length;
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`user\`] = v1[i1];
      ctx[\`user_first\`] = i1 === 0;
      ctx[\`user_last\`] = i1 === v1.length - 1;
      ctx[\`user_index\`] = i1;
      ctx[\`user_value\`] = k1[i1];
      let key1 = ctx['user'].id;
      const b3 = b2.children[i1] = new Block2();
      const ctx3 = capture(ctx);
      const b5 = b3.children[0] = new BNode(\`Link\`, {to: '/user/'+ctx['user'].id}, key + \`__2__\${key1}\`, ctx, node);
      b5.node.slots = {'default': slot4(ctx3)};
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<a><owl-anchor/></a>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
    update(prevData, data) {
      this.updateAttr(this.el, \`href\`, this.data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].to;
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 3 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><u><owl-anchor/></u></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<li><owl-anchor/></li>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot4 = ctx => (node, key) => {
    const b4 = new BText(ctx['userdescr']);
    return b4;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = b1.children[0] = new BCollection(ctx['state'].users, true, false);
    ctx = Object.create(ctx);
    const k1 = b2.values, v1 = b2.collection, l1 = k1.length;
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`user\`] = v1[i1];
      ctx[\`user_first\`] = i1 === 0;
      ctx[\`user_last\`] = i1 === v1.length - 1;
      ctx[\`user_index\`] = i1;
      ctx[\`user_value\`] = k1[i1];
      let key1 = ctx['user'].id;
      const b3 = b2.children[i1] = new Block2();
      ctx[\`userdescr\`] = 'User '+ctx['user'].name;
      const ctx3 = capture(ctx);
      const b5 = b3.children[0] = new BNode(\`Link\`, {to: '/user/'+ctx['user'].id}, key + \`__2__\${key1}\`, ctx, node);
      b5.node.slots = {'default': slot4(ctx3)};
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 4 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<a><owl-anchor/></a>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
    update(prevData, data) {
      this.updateAttr(this.el, \`href\`, this.data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].to;
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots are rendered with proper context, part 4 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new BText(ctx['userdescr']);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`userdescr\`] = 'User '+ctx['state'].user.name;
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Link\`, {to: '/user/'+ctx['state'].user.id}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slots in slots, with vars 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots in slots, with vars 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = callSlot(ctx, node, key, 'default');
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`B\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots slots in slots, with vars 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<p>hey<owl-text/></p>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild.nextSibling, prevData[0], data[0]);
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const b2 = new Block2();
    b2.data[0] = ctx['test'];
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    ctx[\`test\`] = ctx['state'].name;
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`A\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach and re-rendering 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-text/><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.nextSibling;
    }
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['state'].val;
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach and re-rendering 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot4 = ctx => (node, key) => {
    const b3 = new BText(ctx['n_index']);
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b2 = b1.children[0] = new BCollection(Array(2), true, false);
    ctx = Object.create(ctx);
    const k1 = b2.values, v1 = b2.collection, l1 = k1.length;
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`n\`] = v1[i1];
      ctx[\`n_first\`] = i1 === 0;
      ctx[\`n_last\`] = i1 === v1.length - 1;
      ctx[\`n_index\`] = i1;
      ctx[\`n_value\`] = k1[i1];
      let key1 = ctx['n_index'];
      const ctx3 = capture(ctx);
      const b4 = b2.children[i1] = new BNode(\`Child\`, {}, key + \`__2__\${key1}\`, ctx, node);
      b4.node.slots = {'default': slot4(ctx3)};
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach in t-foreach 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach in t-foreach 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BElem {
    static el = elem(\`<div><owl-text/></div>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  class Block3 extends BElem {
    static el = elem(\`<ul><owl-anchor/></ul>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block4 extends BElem {
    static el = elem(\`<li><owl-text/></li>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  const slot5 = ctx => (node, key) => {
    const b7 = new Block4();
    b7.data[0] = ctx['node1'].value;
    return b7;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b2 = b1.children[0] = new BCollection(ctx['tree'], true, false);
    ctx = Object.create(ctx);
    const k1 = b2.values, v1 = b2.collection, l1 = k1.length;
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`node1\`] = v1[i1];
      ctx[\`node1_first\`] = i1 === 0;
      ctx[\`node1_last\`] = i1 === v1.length - 1;
      ctx[\`node1_index\`] = i1;
      ctx[\`node1_value\`] = k1[i1];
      let key1 = ctx['node1'].key;
      const b3 = b2.children[i1] = new BMulti(2);
      const b4 = b3.children[0] = new Block2();
      b4.data[0] = ctx['node1'].value;
      const b5 = b3.children[1] = new Block3();
      const b6 = b5.children[0] = new BCollection(ctx['node1'].nodes, true, false);
      ctx = Object.create(ctx);
      const k2 = b6.values, v2 = b6.collection, l2 = k2.length;
      for (let i2 = 0; i2 < l2; i2++) {
        ctx[\`node2\`] = v2[i2];
        ctx[\`node2_first\`] = i2 === 0;
        ctx[\`node2_last\`] = i2 === v2.length - 1;
        ctx[\`node2_index\`] = i2;
        ctx[\`node2_value\`] = k2[i2];
        let key2 = ctx['node2'].key;
        const ctx4 = capture(ctx);
        const b8 = b6.children[i2] = new BNode(\`Child\`, {}, key + \`__3__\${key1}__\${key2}\`, ctx, node);
        b8.node.slots = {'default': slot5(ctx4)};
        b6.keys[i2] = key2;
      }
      ctx = ctx.__proto__;
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach with t-set and re-rendering 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-text/><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    data = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild.nextSibling;
    }
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['state'].val;
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots slots in t-foreach with t-set and re-rendering 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot4 = ctx => (node, key) => {
    const b3 = new BText(ctx['dummy']);
    return b3;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const b2 = b1.children[0] = new BCollection(Array(2), true, false);
    ctx = Object.create(ctx);
    const k1 = b2.values, v1 = b2.collection, l1 = k1.length;
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`n\`] = v1[i1];
      ctx[\`n_first\`] = i1 === 0;
      ctx[\`n_last\`] = i1 === v1.length - 1;
      ctx[\`n_index\`] = i1;
      ctx[\`n_value\`] = k1[i1];
      let key1 = ctx['n_index'];
      ctx[\`dummy\`] = ctx['n_index'];
      const ctx3 = capture(ctx);
      const b4 = b2.children[i1] = new BNode(\`Child\`, {}, key + \`__2__\${key1}\`, ctx, node);
      b4.node.slots = {'default': slot4(ctx3)};
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`slots t-debug on a t-set-slot (defining a slot) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'content');
    return b1;
  }
}"
`;

exports[`slots t-debug on a t-set-slot (defining a slot) 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    debugger;
    const b2 = new BText(\`abc\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'content': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots t-set t-value in a slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-set t-value in a slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    ctx[\`rainbow\`] = 'dash';
    const b2 = new BText(ctx['rainbow']);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots t-slot in recursive templates 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<wrapper><owl-anchor/></wrapper>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-slot in recursive templates 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  const callTemplate_6 = getTemplate(\`_test_recursive_template\`);
  
  const slot3 = ctx => (node, key) => {
    const b1 = new BMulti(2);
    b1.children[0] = new BText(ctx['name']);
    const b2 = b1.children[1] = new BCollection(ctx['items'], false, false);
    ctx = Object.create(ctx);
    const k4 = b2.values, v4 = b2.collection, l4 = k4.length;
    for (let i1 = 0; i1 < l4; i1++) {
      ctx[\`item\`] = v4[i1];
      ctx[\`item_first\`] = i1 === 0;
      ctx[\`item_last\`] = i1 === v4.length - 1;
      ctx[\`item_index\`] = i1;
      ctx[\`item_value\`] = k4[i1];
      let key1 = ctx['item'].name;
      const b3 = b2.children[i1] = new BMulti(2);
      if (!ctx['item'].children.length) {
        b3.children[0] = new BText(ctx['item'].name);
      } else {
        ctx = Object.create(ctx);
        ctx[\`name\`] = ctx['item'].name;
        ctx[\`items\`] = ctx['item'].children;
        b3.children[1] = callTemplate_6(ctx, node, key + \`__5__\${key1}\`);
        ctx = ctx.__proto__;
      }
      b2.keys[i1] = key1;
    }
    ctx = ctx.__proto__;
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const ctx2 = capture(ctx);
    const b4 = new BNode(\`Wrapper\`, {}, key + \`__1\`, ctx, node);
    b4.node.slots = {'default': slot3(ctx2)};
    return b4;
  }
}"
`;

exports[`slots t-slot nested within another slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<span>Child 3</span>\`);
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`slots t-slot nested within another slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"modal\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-slot nested within another slot 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"portal\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-slot nested within another slot 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"c2\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b3 = new BNode(\`Portal\`, {}, key + \`__3\`, ctx, node);
    b3.node.slots = {'default': slot4(ctx)};
    return b3;
  }
  
  const slot4 = ctx => (node, key) => {
    const b2 = callSlot(ctx, node, key, 'default');
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b4 = b1.children[0] = new BNode(\`Modal\`, {}, key + \`__1\`, ctx, node);
    b4.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots t-slot nested within another slot 5`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span id=\\"c1\\"><owl-anchor/></span>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BNode(\`Child3\`, {}, key + \`__3\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;

exports[`slots t-slot scope context 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-slot scope context 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    handlers = new Array(1);
    build() {
      const el1 = this.el;
      this.setupHandler(el1, \`click\`, 0);
      this.anchors[0] = el1.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b1 = new Block1();
    b1.handlers[0] = (e) => ctx.__owl__.component['onClick'](e);
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    ctx = Object.create(ctx);
    const b2 = new BNode(\`Wrapper\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots t-slot scope context 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<button>The Button</button>\`);
  }
  
  const slot2 = ctx => (node, key) => {
    const b1 = new Block1();
    return b1;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b2 = new BNode(\`Dialog\`, {}, key + \`__1\`, ctx, node);
    b2.node.slots = {'default': slot2(ctx)};
    return b2;
  }
}"
`;

exports[`slots t-slot within dynamic t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BStatic {
    static el = elem(\`<div class=\\"child\\"/>\`);
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`slots t-slot within dynamic t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div class=\\"slotted\\"><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots t-slot within dynamic t-call 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div class=\\"slot\\"><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.children[0] = new BNode(\`Child\`, {}, key + \`__1\`, ctx, node);
    return b1;
  }
}"
`;

exports[`slots t-slot within dynamic t-call 4`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot3 = ctx => (node, key) => {
    const template5 = (ctx['tcallTemplate']);
    const b2 = call(template5, ctx, node, key + \`__4\`);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const ctx2 = capture(ctx);
    const b3 = b1.children[0] = new BNode(\`Slotted\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot3(ctx2)};
    return b1;
  }
}"
`;

exports[`slots template can just return a slot 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<span><owl-text/></span>\`);
    data = new Array(1);
    update(prevData, data) {
      setText(this.el.firstChild, prevData[0], data[0]);
    }
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    b1.data[0] = ctx['props'].value;
    return b1;
  }
}"
`;

exports[`slots template can just return a slot 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = callSlot(ctx, node, key, 'default');
    return b1;
  }
}"
`;

exports[`slots template can just return a slot 3`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BNode, BComponentH, BHtml, BMulti, BElem, BStatic, BText, BDispatch} = Blocks;
  let {elem, setText, withDefault, call, getTemplate, zero, callSlot, capture, toClassObj} = utils;
  
  class Block1 extends BElem {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  const slot2 = ctx => (node, key) => {
    const b2 = new BNode(\`Child\`, {value: ctx['state'].value}, key + \`__3\`, ctx, node);
    return b2;
  }
  
  return function template(ctx, node = ctx.__owl__, key = \\"\\") {
    const b1 = new Block1();
    const b3 = b1.children[0] = new BNode(\`SlotComponent\`, {}, key + \`__1\`, ctx, node);
    b3.node.slots = {'default': slot2(ctx)};
    return b1;
  }
}"
`;
